# midanalgo

./: .gitignore  README.md  assign_workers.py  gui.py  install_gui.sh  main.py  midanalgo.py  pyproject.toml  requirements.txt  sheets.py  split_solver.py  tox.ini
.github/workflows/: main.yml
installers/: linux.sh  macos_arm.sh  macos_x86.sh
src/work_divider/: assign_workers.py  batching.py  divide_work_cli.py  sheet_logs.py  sheets.py  split_solver.py
test/: sample_tablebase.xlsx  test_assign_workers.py  test_sheets.py  test_split_solver.py
tests/: conftest.py  sample_data.xlsx  sample_tablebase.xlsx  test_assign_workers.py  test_batching.py  test_divide_work_cli.py  test_sheets.py  test_split_solver.py
